AI-JADEDEVS4/src/objects/Territory_Area__c.object
<CustomObject>
    <fields>
        <fullName>Area_Name__c</fullName>
        <formula>Area__r.Name</formula>
        <label>Area Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Territory Areas</relationshipLabel>
        <relationshipName>Territory_Areas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Areacode__c</fullName>
        <formula>Area__r.AreaCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Area__r.Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>Area__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <formula>Territory__r.User__r.FirstName + Territory__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Enforces one area per territory type (Lead, CSM). Prevents duplicate areas from being assigned.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <formula>Territory__r.NAICS_Code__c</formula>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Codes__c</fullName>
        <label>NAICS Codes</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Area__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryName__c</fullName>
        <formula>Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_NAICS_Code__c</fullName>
        <formula>Territory__r.NAICS_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Role__c</fullName>
        <formula>TEXT(Territory__r.Owner_Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Revenue_Band__c</fullName>
        <formula>TEXT( Territory__r.Revenue_Band__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Revenue Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Territory Areas</relationshipLabel>
        <relationshipName>Territory_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <formula>Area__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zipcode</label>
        <type>Text</type>
    </fields>
    <label>Territory Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area_Name__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>Territory_Owner_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TerritoryArea-{00000000}</displayFormat>
        <label>Territory Area ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>